--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <DOCTYPE! html>
-<html>
+  <html>
     <head>
-        <title>twitter test</title>
-        <link href="css/style.css" type="text/css" rel="stylesheet">
+      <title>twitter test</title>
+      <link href="css/style.css" type="text/css" rel="stylesheet" />
+      <meta charset="utf-8" />
     </head>
     <body>
-        <div id="content">
-          <div id="titleDiv">
-            <h1 id="title">Twitter Media<br>Download</h1>
-          </div>
-          <form id="formID" action="#" method="post">
-                <input id="linkInput" type="text" name="tweetURL"> <br>
-                <div id="retrieve">
-                  <button id="submitButton" type="button">submit</button>
-                  <a id="downloadIcon" target="_blank" href="" download></a>
-                </div>
-          </form>
+      <div id="content">
+        <div id="titleDiv">
+          <h1 id="title">Twitter Media<br />Downoad</h1>
         </div>
+        <form id="formID" action="#" method="post">
+          <input id="linkInput" type="text" name="tweetURL" /> <br />
+          <div id="retrieve">
+            <button id="submitButton" type="button">submit</button>
+          </div>
+        </form>
+      </div>
     </body>
     <script src="app.js"></script>
-</html>
+  </html>
+</DOCTYPE!>
