--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
       <div id="content">
         <div id="titleDiv">
-          <h1 id="title">Twitter Media<br />Downoad</h1>
+          <h1 id="title">Twitter Media<br />Download</h1>
         </div>
         <form id="formID" action="#" method="post">
           <input id="linkInput" type="text" name="tweetURL" /> <br />
